--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/github.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/github.min.css"
     />
     <link rel="stylesheet" href="./css/rivet-add-on-boilerplate-lite.css" />
   </head>
