Added missing hljs script import
The page pulled in the hljs theme CSS but not the JS

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,14 @@
   let message = prompt("What would you like me to say?");
 
   alert(message);
-  
+
 }</code></pre>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
     <script src="./js/rivet-add-on-boilerplate-lite.js"></script>
     <script>
+      hljs.initHighlightingOnLoad();
+
       const component = new MyComponent();
       component.sampleFunctionality();
     </script>
