Changed the example code to HTML
The majority of example code blocks in Rivet component docs are HTML. I'll be adding a JS example as well, though.

--- a/src/index.html
+++ b/src/index.html
@@ -31,17 +31,11 @@
         <button class="rvt-button" id="my-button">Click me</button>
       </div>
 
-      <pre><code class="language-javascript">const handleClick = event => {
-
-  var button = event.target.closest("#my-button");
-
-  if (!button) return;
-
-  let message = prompt("What would you like me to say?");
-
-  alert(message);
-
-}</code></pre>
+      <pre><code class="html">&lt;div class=&quot;rvt-component-name&quot;&gt;
+  &lt;div class=&quot;rvt-component-name__content&quot;&gt;
+    Example content
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
     <script src="./js/rivet-add-on-boilerplate-lite.js"></script>
