Added comment guiding a developer on the use of code samples in their docs

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,22 @@
         <button class="rvt-button" id="my-button">Click me</button>
       </div>
 
+      <!--
+        Your add-on documentation should include code samples that show how a
+        developer can use each variation of your new component.
+
+        Use the component documentation on the Rivet website as a guide for how
+        to write and structure your add-on documentation:
+
+        https://rivet.iu.edu/components/
+
+        Example code inside <pre> tags must be escaped. Escaping example code
+        by hand is a pain, so here's a website into which you can paste your
+        example code and get an escaped version back:
+
+        https://codebeautify.org/html-escape-unescape
+      -->
+      
       <pre><code class="html">&lt;div class=&quot;rvt-component-name&quot;&gt;
   &lt;div class=&quot;rvt-component-name__content&quot;&gt;
     Example content
