Added JS code example alongside HTML example

--- a/src/index.html
+++ b/src/index.html
@@ -47,11 +47,17 @@
         https://codebeautify.org/html-escape-unescape
       -->
       
+      <!-- HTML -->
       <pre><code class="html">&lt;div class=&quot;rvt-component-name&quot;&gt;
   &lt;div class=&quot;rvt-component-name__content&quot;&gt;
     Example content
   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
+      
+      <!-- JavaScript -->
+      <pre><code class="js">const component = new MyComponent();
+component.sampleFunctionality();</code></pre>
+
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
     <script src="./js/rivet-add-on-boilerplate-lite.js"></script>
