Added comment marking where the developer should start writing their docs, along with links to tips on good doc writing

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,21 @@
     <div
       class="rvt-container rvt-container--center rvt-container--sophomore rvt-m-top-xxl rvt-m-bottom-xxl rvt-typeset"
     >
+
+      <!--
+        Write your add-on documentation below.
+
+        Use the component documentation on the Rivet website as a guide for how
+        to write and structure your add-on documentation:
+
+        https://rivet.iu.edu/components/
+
+        For general tips on writing effective documentation, see the User
+        Experience Office website:
+
+        https://ux.iu.edu/writings/writing-effective-documentation/
+      -->
+      
       <h1>My new component</h1>
       <p class="rvt-m-top-xxs rvt-m-bottom-xxl rvt-ts-20">
         This is a brief description of what my component does.
@@ -34,11 +49,6 @@
       <!--
         Your add-on documentation should include code samples that show how a
         developer can use each variation of your new component.
-
-        Use the component documentation on the Rivet website as a guide for how
-        to write and structure your add-on documentation:
-
-        https://rivet.iu.edu/components/
 
         Example code inside <pre> tags must be escaped. Escaping example code
         by hand is a pain, so here's a website into which you can paste your
