Wrapped JS code example in rvt-example elements

--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,12 @@
       </div>
       
       <!-- JavaScript -->
-      <pre><code class="js">const component = new MyComponent();
+      <div class="rvt-example">
+        <div class="rvt-example__code--only">
+          <pre><code class="js">const component = new MyComponent();
 component.sampleFunctionality();</code></pre>
+        </div>
+      </div>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
