Removed redundant code block styles that were replaced by rvt-example styles

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
       
       <!-- JavaScript -->
       <div class="rvt-example">
-        <div class="rvt-example__code--only">
+        <div class="rvt-example__code rvt-example__code--only">
           <pre><code class="js">const component = new MyComponent();
 component.sampleFunctionality();</code></pre>
         </div>
