Corrected JS method table header to read "method" not "event"

--- a/src/index.html
+++ b/src/index.html
@@ -136,10 +136,10 @@ component.sampleFunctionality();</code></pre>
       <h3>Available methods</h3>
       <p>Here’s a breakdown of the available component methods you can use in your scripts.</p>
       <table class="rvt-table-cells">
-        <caption class="sr-only">Component custom events</caption>
+        <caption class="sr-only">Component methods</caption>
         <thead>
           <tr>
-            <th scope="col">Event</th>
+            <th scope="col">Method</th>
             <th scope="col">Description</th>
           </tr>
         </thead>
