Removed ellipsis from doc boilerplate

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
       -->
 
       <h2>Using the component</h2>
-      <p>Start writing your documentation here...</p>
+      <p>Start writing your documentation here.</p>
       
       <!-- HTML -->
       <div class="rvt-example">
