Added comments to demarcate JS docs subsections

--- a/src/index.html
+++ b/src/index.html
@@ -133,6 +133,7 @@ component.sampleFunctionality();</code></pre>
       <h2>JavaScript API</h2>
       <p>The component JavaScript exposes a couple of methods to use in your own scripts. The <code>init()</code> method is called by the main <code>rivet.js</code> file the first time the script is loaded. This method will initialize the component and attach the event listeners that handle its interactions.</p>
 
+      <!-- Available JS methods -->
       <h3>Available methods</h3>
       <p>Here’s a breakdown of the available component methods you can use in your scripts.</p>
       <table class="rvt-table-cells">
@@ -158,6 +159,7 @@ component.sampleFunctionality();</code></pre>
         </tbody>
       </table>
 
+      <!-- Custom events fired by your add-on -->
       <h3>Custom events</h3>
       <p>The component also emits various custom events that you can listen for in your own scripts.</p>
       <table class="rvt-table-cells">
